--- a/sticky-navbar-landing-page/main.scss
+++ b/sticky-navbar-landing-page/main.scss
@@ -154,8 +154,8 @@ nav {
 }
 #back-to-top-btn {
 	display: flex;
-	justify-content: flex-end;
-	align-items: flex-end;
+	justify-content: center;
+	align-items: center;
 	position: fixed;
 	bottom: 20px;
 	right: 20px;
@@ -165,7 +165,7 @@ nav {
 	color: #333;
 	cursor: pointer;
 	outline: none;
-	border: 3px solid #333;
+	border: 3px solid white;
 	border-radius: 15%;
 	transition-duration: 0.2s;
 	transition-timing-function: ease-in-out;
@@ -173,17 +173,91 @@ nav {
 	box-shadow: 2px 2px 8px 0 rgba(0, 0, 0, 0.4);
 	svg {
 		height: 70%;
+		fill: white;
 	}
 }
 #back-to-top-btn:hover,
 #back-to-top-btn:focus {
-	background-color: white;
-	color: #111;
-	border: 3px solid #111;
+	background-color: rgba(255, 255, 255, 0.394);
 	box-shadow: 2px 2px 8px 0 rgba(0, 0, 0, 0.4), 4px 4px 8px 0 rgba(0, 0, 0, 0.4), 4px 6px 8px 0 rgba(0, 0, 0, 0.4);
 }
-
+.mobile-nav{
+	display: none;
+}
 @media (max-width: 992px) {
+	header {
+		padding: 20px !important;
+		.menu-btn {
+			width: 32px;
+			height: 26px;
+			display: flex;
+			justify-content: space-between;
+			flex-direction: column;
+			cursor: pointer;
+			* {
+				transition: 300ms ease-in;
+			}
+			&.open {
+				.line-top {
+					transform: rotate(45deg) translateX(4px) translateY(8px);
+				}
+				.line-middle {
+					transform: translateX(10px);
+					opacity: 0;
+				}
+				.line-bottom {
+					transform: rotate(-45deg) translateX(8px) translateY(-12px);
+				}
+			}
+			.line-top {
+				width: 100%;
+				height: 3px;
+				background-color: #fff;
+			}
+			.line-middle {
+				width: 100%;
+				height: 3px;
+				background-color: #fff;
+			}
+			.line-bottom {
+				width: 100%;
+				height: 3px;
+				background-color: #fff;
+			}
+		}
+		&.sticky {
+			padding: 15px;
+		}
+		ul {
+			display: none;
+		}
+	}
+	.mobile-nav {
+		position: fixed;
+		z-index: 2;
+		overscroll-behavior: contain;
+		width: 100%;
+		height: 100vh;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		gap: 20px;
+		top: 0;
+		left: 0;
+		background-color: rgba(0, 0, 0, 0.912);
+		transform: translateY(-100%);
+		transition: 300ms linear;
+		ul {
+			list-style-type: none;
+			display: flex;
+			flex-direction: column;
+			gap: 20px;
+			font-size: 1.4rem;
+		}
+		&.open {
+			transform: translateY(0%);
+		}
+	}
 	.container {
 		padding: 20px 100px;
 	}
