--- a/sticky-navbar-landing-page/main.css
+++ b/sticky-navbar-landing-page/main.css
@@ -140,6 +140,7 @@ nav li a {
 }
 nav li a svg {
   fill: white;
+  height: 32px;
 }
 nav li a:hover {
   width: 90px;
@@ -193,6 +194,7 @@ nav li a:hover {
 
 @media (max-width: 992px) {
   header {
+    height: 80px;
     padding: 20px !important;
   }
   header .menu-btn {
@@ -233,6 +235,7 @@ nav li a:hover {
   }
   header.sticky {
     padding: 15px;
+    height: 50px;
   }
   header ul {
     display: none;
@@ -263,6 +266,21 @@ nav li a:hover {
   }
   .mobile-nav.open {
     transform: translateY(0%);
+  }
+  nav {
+    width: 50px;
+    height: 10vh;
+  }
+  nav li {
+    height: 50px;
+  }
+  nav li a svg {
+    fill: white;
+    height: 28px;
+  }
+  nav li a:hover {
+    width: 70px;
+    border-radius: 0px 7px 7px 0px;
   }
   .container {
     padding: 20px 100px;
