--- a/bottom-menu/css/style.scss
+++ b/bottom-menu/css/style.scss
@@ -5,3 +5,10 @@
 	box-sizing: border-box;
 	font-family: 'Poppins', sans-serif;
 }
+body {
+	width: 100%;
+}
+.main {
+	padding-block: 80px;
+	padding-inline: 20px;
+}
