--- a/bottom-menu/css/style.css
+++ b/bottom-menu/css/style.css
@@ -13,4 +13,39 @@ body {
 .main {
   padding-block: 80px;
   padding-inline: 20px;
+}
+
+.nav {
+  top: 0;
+  position: fixed;
+  height: 70px;
+  width: 100vw;
+  background-color: rgb(30, 30, 30);
+}
+.nav > ul {
+  position: relative;
+  width: 100vw;
+  height: 100%;
+  display: flex;
+  justify-content: start;
+  list-style-type: none;
+  overflow: auto;
+}
+.nav > ul li {
+  height: 100%;
+  display: flex;
+  padding: 10px;
+  text-align: center;
+}
+.nav > ul li:hover {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.nav > ul li a {
+  text-decoration: none;
+  color: #fff;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }/*# sourceMappingURL=style.css.map */
