--- a/bottom-menu/css/style.scss
+++ b/bottom-menu/css/style.scss
@@ -45,5 +45,49 @@ body {
 			}
 		}
 	}
-	
+	.menu {
+		position: absolute;
+		overflow: auto;
+		bottom: auto;
+		top: 70px;
+		display: flex;
+		justify-content: center;
+		align-items: start;
+		background-color: rgba(0, 0, 0, 0.9);
+		backdrop-filter: blur(4px);
+		translate: 0% 0%;
+		opacity: 0;
+		transition: 300ms translate linear, 100ms opacity linear;
+		visibility: hidden;
+		&.active {
+			opacity: 1;
+			visibility: visible;
+		}
+		& > ul {
+			padding: 10px;
+			max-height: 400px;
+			overflow-y: auto;
+			list-style-type: none;
+			bottom: 80px;
+			color: white;
+			width: 100vw;
+			left: 0;
+			display: grid;
+			justify-content: center;
+			align-items: center;
+			grid-template-columns: repeat(auto-fit, minmax(400px ,1fr));
+			overscroll-behavior: contain;
+			li {
+				padding: 20px;
+				text-align: center;
+				&:hover {
+					background-color: rgba(88, 87, 87, 0.3);
+				}
+				a {
+					text-decoration: none;
+					color: white;
+				}
+			}
+		}
+	}
 }
