--- a/bottom-menu/css/style.css
+++ b/bottom-menu/css/style.css
@@ -15,17 +15,46 @@ body {
   padding-inline: 20px;
 }
 
-.nav {
-  top: 0;
+header {
+  display: flex;
   position: fixed;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
   height: 70px;
   width: 100vw;
-  background-color: rgb(30, 30, 30);
+  justify-content: space-between;
+  align-items: center;
+  padding-inline: 20px;
+}
+header .home-btn a {
+  text-decoration: none;
+  padding: 10px 20px;
+  background-color: rgb(255, 255, 255);
+  color: #000;
+  border-radius: 25px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+}
+header .other-links ul {
+  list-style-type: none;
+  display: flex;
+  gap: 20px;
+}
+header .other-links ul li a {
+  text-decoration: none;
+  background-color: rgb(28, 149, 210);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  padding: 10px 20px;
+  border-radius: 25px;
+  color: white;
+}
+
+.nav {
+  height: 100%;
 }
 .nav > ul {
   position: relative;
-  width: 100vw;
   height: 100%;
+  width: 100%;
   display: flex;
   justify-content: start;
   list-style-type: none;
@@ -42,7 +71,7 @@ body {
 }
 .nav > ul li a {
   text-decoration: none;
-  color: #fff;
+  color: #000;
   height: 100%;
   width: 100%;
   display: flex;
@@ -76,7 +105,6 @@ body {
   list-style-type: none;
   bottom: 80px;
   color: white;
-  width: 100vw;
   left: 0;
   display: grid;
   justify-content: center;
@@ -84,6 +112,7 @@ body {
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   -ms-scroll-chaining: none;
       overscroll-behavior: contain;
+  border-right: 3px solid red;
 }
 .nav .menu > ul li {
   padding: 20px;
@@ -99,8 +128,18 @@ body {
 
 @media (max-width: 768px) {
   .nav {
+    position: fixed;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+    left: 0;
+    height: 60px;
+    width: 100vw;
     top: auto;
     bottom: 0;
+  }
+  .nav > ul {
+    width: 100vw;
+    justify-content: space-evenly;
   }
   .nav > ul li {
     font-size: 0.75rem;
