--- a/bottom-menu/css/style.scss
+++ b/bottom-menu/css/style.scss
@@ -12,16 +12,50 @@ body {
 	padding-block: 80px;
 	padding-inline: 20px;
 }
-.nav {
-	top: 0;
+header {
+	display: flex;
 	position: fixed;
+	background-color: rgb(255, 255, 255);
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
 	height: 70px;
 	width: 100vw;
-	background-color: rgba(30, 30, 30, 1);
+	justify-content: space-between;
+	align-items: center;
+	padding-inline: 20px;
+	.home-btn {
+		a {
+			text-decoration: none;
+			padding: 10px 20px;
+			background-color: rgb(255, 255, 255);
+			color: #000;
+			border-radius: 25px;
+			box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+		}
+	}
+	.other-links {
+		ul {
+			list-style-type: none;
+			display: flex;
+			gap: 20px;
+			li {
+				a {
+					text-decoration: none;
+					background-color: rgb(28, 149, 210);
+					box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+					padding: 10px 20px;
+					border-radius: 25px;
+					color: white;
+				}
+			}
+		}
+	}
+}
+.nav {
+	height: 100%;
 	& > ul {
 		position: relative;
-		width: 100vw;
 		height: 100%;
+		width: 100%;
 		display: flex;
 		justify-content: start;
 		list-style-type: none;
@@ -36,7 +70,7 @@ body {
 			}
 			a {
 				text-decoration: none;
-				color: #fff;
+				color: #000;
 				height: 100%;
 				width: 100%;
 				display: flex;
@@ -59,6 +93,7 @@ body {
 		opacity: 0;
 		transition: 300ms translate linear, 100ms opacity linear;
 		visibility: hidden;
+
 		&.active {
 			opacity: 1;
 			visibility: visible;
@@ -70,13 +105,14 @@ body {
 			list-style-type: none;
 			bottom: 80px;
 			color: white;
-			width: 100vw;
+			// width: 100%;
 			left: 0;
 			display: grid;
 			justify-content: center;
 			align-items: center;
 			grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 			overscroll-behavior: contain;
+			border-right: 3px solid red;
 			li {
 				padding: 20px;
 				text-align: center;
@@ -93,10 +129,20 @@ body {
 }
 @media (max-width: 768px) {
 	.nav {
+		position: fixed;
+		background-color: rgb(255, 255, 255);
+		box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+		left: 0;
+		height: 60px;
+		width: 100vw;
 		top: auto;
 		bottom: 0;
-		& > ul li {
-			font-size: 0.75rem;
+		& > ul {
+			width: 100vw;
+			justify-content: space-evenly;
+			li {
+				font-size: 0.75rem;
+			}
 		}
 		.menu {
 			bottom: 70px;
