--- a/bottom-menu/css/style.css
+++ b/bottom-menu/css/style.css
@@ -80,6 +80,7 @@ header .other-links ul li a {
 }
 .nav .menu {
   position: absolute;
+  left: 0;
   overflow: auto;
   bottom: auto;
   top: 70px;
@@ -105,6 +106,7 @@ header .other-links ul li a {
   list-style-type: none;
   bottom: 80px;
   color: white;
+  width: 100vw;
   left: 0;
   display: grid;
   justify-content: center;
@@ -112,7 +114,6 @@ header .other-links ul li a {
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   -ms-scroll-chaining: none;
       overscroll-behavior: contain;
-  border-right: 3px solid red;
 }
 .nav .menu > ul li {
   padding: 20px;
