--- a/bottom-menu/css/style.scss
+++ b/bottom-menu/css/style.scss
@@ -86,6 +86,7 @@ header {
 		bottom: auto;
 		top: 70px;
 		display: flex;
+		flex-direction: column;
 		justify-content: center;
 		align-items: start;
 		background-color: rgba(0, 0, 0, 0.9);
@@ -99,29 +100,44 @@ header {
 			opacity: 1;
 			visibility: visible;
 		}
-		& > ul {
+		.close-btn {
+			color: #fff;
+			margin: 10px;
 			padding: 10px;
-			max-height: 400px;
-			overflow-y: auto;
-			list-style-type: none;
-			bottom: 80px;
-			color: white;
-			width: 100vw;
-			left: 0;
-			display: grid;
+			border: 1px solid white;
+			cursor: pointer;
+		}
+		.lists {
+			display: flex;
 			justify-content: center;
-			align-items: center;
-			grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-			overscroll-behavior: contain;
-			li {
-				padding: 20px;
-				text-align: center;
-				&:hover {
-					background-color: rgba(88, 87, 87, 0.3);
-				}
-				a {
-					text-decoration: none;
-					color: white;
+			align-items: start;
+			transition: 300ms translate linear, 100ms opacity linear;
+			& > ul {
+				margin: 0 auto;
+				padding: 10px;
+				max-height: 400px;
+				overflow-y: auto;
+				list-style-type: none;
+				bottom: 80px;
+				color: white;
+				width: 100vw;
+				overflow-x: hidden;
+				left: 0;
+				display: grid;
+				justify-content: center;
+				align-items: center;
+				grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+				overscroll-behavior: contain;
+				li {
+					padding: 20px;
+					text-align: center;
+					&:hover {
+						background-color: rgba(88, 87, 87, 0.3);
+					}
+					a {
+						text-decoration: none;
+						color: white;
+					}
 				}
 			}
 		}
