--- a/bottom-menu/css/style.css
+++ b/bottom-menu/css/style.css
@@ -6,8 +6,28 @@
   font-family: "Poppins", sans-serif;
 }
 
+:root {
+  --bg-color: #fff;
+  --navbar-color: #fff;
+  --button-color: #fff;
+  --menu-color: #fff;
+  --text-color: #000;
+  --shadow-color: rgba(0, 0, 0, 0.09);
+}
+
+.darkmode {
+  --bg-color: rgb(25, 25, 25);
+  --navbar-color: rgb(15, 15, 15);
+  --button-color: rgb(0, 0, 0);
+  --menu-color: rgba(0, 0, 0, 0.931);
+  --text-color: #fff;
+  --shadow-color: rgba(0, 0, 0, 0.444);
+}
+
 body {
   width: 100%;
+  background-color: var(--bg-color);
+  color: var(--text-color);
 }
 
 .main {
@@ -18,7 +38,7 @@ body {
 header {
   display: flex;
   position: fixed;
-  background-color: rgb(255, 255, 255);
+  background-color: var(--navbar-color);
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
   height: 70px;
   width: 100vw;
@@ -29,20 +49,39 @@ header {
 header .home-btn a {
   text-decoration: none;
   padding: 10px 20px;
-  background-color: rgb(255, 255, 255);
-  color: #000;
+  background-color: var(--button-color);
+  color: var(--text-color);
   border-radius: 25px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+  box-shadow: 0px 0px 10px var(--shadow-color);
+}
+header .other-links {
+  display: flex;
+  gap: 20px;
+}
+header .other-links button {
+  border: none;
+  background-color: transparent;
+  padding: 10px;
+  background-color: var(--button-color);
+  color: var(--text-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  box-shadow: 0px 0px 10px var(--shadow-color);
+  cursor: pointer;
 }
 header .other-links ul {
   list-style-type: none;
   display: flex;
-  gap: 20px;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
 }
 header .other-links ul li a {
   text-decoration: none;
   background-color: rgb(28, 149, 210);
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 10px var(--shadow-color);
   padding: 10px 20px;
   border-radius: 25px;
   color: white;
@@ -71,7 +110,7 @@ header .other-links ul li a {
 }
 .nav > ul li a {
   text-decoration: none;
-  color: #000;
+  color: var(--text-color);
   height: 100%;
   width: 100%;
   display: flex;
@@ -88,7 +127,7 @@ header .other-links ul li a {
   flex-direction: column;
   justify-content: center;
   align-items: start;
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: var(--menu-color);
   -webkit-backdrop-filter: blur(4px);
           backdrop-filter: blur(4px);
   translate: 0% 0%;
@@ -101,10 +140,10 @@ header .other-links ul li a {
   visibility: visible;
 }
 .nav .menu .close-btn {
-  color: #fff;
+  color: var(--text-color);
   margin: 10px;
   padding: 10px;
-  border: 1px solid white;
+  border: 1px solid var(--text-color);
   cursor: pointer;
 }
 .nav .menu .lists {
@@ -120,7 +159,7 @@ header .other-links ul li a {
   overflow-y: auto;
   list-style-type: none;
   bottom: 80px;
-  color: white;
+  color: var(--text-color);
   width: 100vw;
   overflow-x: hidden;
   left: 0;
@@ -140,14 +179,23 @@ header .other-links ul li a {
 }
 .nav .menu .lists > ul li a {
   text-decoration: none;
-  color: white;
+  color: var(--text-color);
 }
 
 @media (max-width: 768px) {
+  header {
+    padding-inline: 10px;
+  }
+  header .other-links {
+    gap: 8px;
+  }
+  header .other-links ul {
+    gap: 8px;
+  }
   .nav {
     position: fixed;
-    background-color: rgb(255, 255, 255);
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+    background-color: var(--navbar-color);
+    box-shadow: 0px 0px 10px var(--shadow-color);
     left: 0;
     height: 60px;
     width: 100vw;
