--- a/bottom-menu/css/style.scss
+++ b/bottom-menu/css/style.scss
@@ -5,8 +5,26 @@
 	box-sizing: border-box;
 	font-family: 'Poppins', sans-serif;
 }
+:root {
+	--bg-color: #fff;
+	--navbar-color: #fff;
+	--button-color: #fff;
+	--menu-color: #fff;
+	--text-color: #000;
+	--shadow-color: rgba(0, 0, 0, 0.09);
+}
+.darkmode {
+	--bg-color: rgb(25, 25, 25);
+	--navbar-color: rgb(15, 15, 15);
+	--button-color: rgb(0, 0, 0);
+	--menu-color: rgba(0, 0, 0, 0.931);
+	--text-color: #fff;
+	--shadow-color: rgba(0, 0, 0, 0.444);
+}
 body {
 	width: 100%;
+	background-color: var(--bg-color);
+	color: var(--text-color);
 }
 .main {
 	padding-block: 80px;
@@ -15,7 +33,7 @@ body {
 header {
 	display: flex;
 	position: fixed;
-	background-color: rgb(255, 255, 255);
+	background-color: var(--navbar-color);
 	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
 	height: 70px;
 	width: 100vw;
@@ -26,22 +44,39 @@ header {
 		a {
 			text-decoration: none;
 			padding: 10px 20px;
-			background-color: rgb(255, 255, 255);
-			color: #000;
+			background-color: var(--button-color);
+			color: var(--text-color);
 			border-radius: 25px;
-			box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+			box-shadow: 0px 0px 10px var(--shadow-color);
 		}
 	}
 	.other-links {
+		display: flex;
+		gap: 20px;
+		button {
+			border: none;
+			background-color: transparent;
+			padding: 10px;
+			background-color: var(--button-color);
+			color: var(--text-color);
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			border-radius: 50%;
+			box-shadow: 0px 0px 10px var(--shadow-color);
+			cursor: pointer;
+		}
 		ul {
 			list-style-type: none;
 			display: flex;
-			gap: 20px;
+			gap: 10px;
+			justify-content: center;
+			align-items: center;
 			li {
 				a {
 					text-decoration: none;
 					background-color: rgb(28, 149, 210);
-					box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+					box-shadow: 0px 0px 10px var(--shadow-color);
 					padding: 10px 20px;
 					border-radius: 25px;
 					color: white;
@@ -70,7 +105,7 @@ header {
 			}
 			a {
 				text-decoration: none;
-				color: #000;
+				color: var(--text-color);
 				height: 100%;
 				width: 100%;
 				display: flex;
@@ -89,7 +124,7 @@ header {
 		flex-direction: column;
 		justify-content: center;
 		align-items: start;
-		background-color: rgba(0, 0, 0, 0.9);
+		background-color: var(--menu-color);
 		backdrop-filter: blur(4px);
 		translate: 0% 0%;
 		opacity: 0;
@@ -101,10 +136,10 @@ header {
 			visibility: visible;
 		}
 		.close-btn {
-			color: #fff;
+			color: var(--text-color);
 			margin: 10px;
 			padding: 10px;
-			border: 1px solid white;
+			border: 1px solid var(--text-color);
 			cursor: pointer;
 		}
 		.lists {
@@ -119,7 +154,7 @@ header {
 				overflow-y: auto;
 				list-style-type: none;
 				bottom: 80px;
-				color: white;
+				color: var(--text-color);
 				width: 100vw;
 				overflow-x: hidden;
 				left: 0;
@@ -136,7 +171,7 @@ header {
 					}
 					a {
 						text-decoration: none;
-						color: white;
+						color: var(--text-color);
 					}
 				}
 			}
@@ -144,10 +179,19 @@ header {
 	}
 }
 @media (max-width: 768px) {
+	header {
+		padding-inline: 10px;
+		.other-links {
+			gap: 8px;
+			ul {
+				gap: 8px;
+			}
+		}
+	}
 	.nav {
 		position: fixed;
-		background-color: rgb(255, 255, 255);
-		box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+		background-color: var(--navbar-color);
+		box-shadow: 0px 0px 10px var(--shadow-color);
 		left: 0;
 		height: 60px;
 		width: 100vw;
