--- a/multiple-hover-menus/css/style.css
+++ b/multiple-hover-menus/css/style.css
@@ -1,1 +1,145 @@
-/*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+:root {
+  --bg-color: #fff;
+  --navbar-color: #fff;
+  --button-color: #fff;
+  --menu-color: #fff;
+  --text-color: #000;
+  --shadow-color: rgba(0, 0, 0, 0.09);
+}
+
+.darkmode {
+  --bg-color: rgb(25, 25, 25);
+  --navbar-color: rgb(15, 15, 15);
+  --button-color: rgb(0, 0, 0);
+  --menu-color: rgba(0, 0, 0, 0.931);
+  --text-color: #fff;
+  --shadow-color: rgba(0, 0, 0, 0.444);
+}
+
+body {
+  width: 100%;
+  background-color: var(--bg-color);
+  color: var(--text-color);
+}
+
+.main {
+  padding-block: 80px;
+  padding-inline: 20px;
+}
+
+header {
+  display: flex;
+  position: fixed;
+  background-color: var(--navbar-color);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+  height: 70px;
+  width: 100vw;
+  justify-content: space-between;
+  align-items: center;
+  padding-inline: 20px;
+}
+header .home-btn a {
+  text-decoration: none;
+  padding: 10px 20px;
+  background-color: var(--button-color);
+  color: var(--text-color);
+  border-radius: 25px;
+  box-shadow: 0px 0px 10px var(--shadow-color);
+}
+header .other-links {
+  display: flex;
+  gap: 20px;
+}
+header .other-links button {
+  border: none;
+  background-color: transparent;
+  padding: 10px;
+  background-color: var(--button-color);
+  color: var(--text-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  box-shadow: 0px 0px 10px var(--shadow-color);
+  cursor: pointer;
+}
+header .other-links ul {
+  list-style-type: none;
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+}
+header .other-links ul li a {
+  text-decoration: none;
+  background-color: rgb(28, 149, 210);
+  box-shadow: 0px 0px 10px var(--shadow-color);
+  padding: 10px 20px;
+  border-radius: 25px;
+  color: white;
+}
+
+.nav {
+  height: 100%;
+}
+.nav > ul {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  list-style-type: none;
+  overflow: auto;
+}
+.nav > ul li {
+  height: 100%;
+  display: flex;
+  padding: 10px;
+  text-align: center;
+}
+.nav > ul li a {
+  text-decoration: none;
+  color: var(--text-color);
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (max-width: 768px) {
+  header {
+    padding-inline: 10px;
+  }
+  header .other-links {
+    gap: 8px;
+  }
+  header .other-links ul {
+    gap: 8px;
+  }
+  .nav {
+    position: fixed;
+    background-color: var(--navbar-color);
+    box-shadow: 0px 0px 10px var(--shadow-color);
+    left: 0;
+    height: 60px;
+    width: 100vw;
+    top: auto;
+    bottom: 0;
+  }
+  .nav > ul {
+    width: 100vw;
+    justify-content: space-evenly;
+  }
+  .nav > ul li {
+    font-size: 0.75rem;
+  }
+}/*# sourceMappingURL=style.css.map */
