--- a/multiple-hover-menus/css/style.css
+++ b/multiple-hover-menus/css/style.css
@@ -12,16 +12,16 @@
   --button-color: #fff;
   --menu-color: #fff;
   --text-color: #000;
-  --shadow-color: rgba(0, 0, 0, 0.09);
+  --shadow-color: rgba(0, 0, 0, 0.05);
 }
 
 .darkmode {
-  --bg-color: rgb(25, 25, 25);
-  --navbar-color: rgb(15, 15, 15);
-  --button-color: rgb(0, 0, 0);
+  --bg-color: #11081f;
+  --navbar-color: #11081f;
+  --button-color: #639;
   --menu-color: rgba(0, 0, 0, 0.931);
   --text-color: #fff;
-  --shadow-color: rgba(0, 0, 0, 0.444);
+  --shadow-color: rgba(0, 0, 0, 0.5);
 }
 
 body {
@@ -39,7 +39,7 @@ header {
   display: flex;
   position: fixed;
   background-color: var(--navbar-color);
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+  box-shadow: 0px 0px 10px var(--shadow-color);
   height: 70px;
   width: 100vw;
   justify-content: space-between;
@@ -99,13 +99,15 @@ header .other-links ul li a {
   list-style-type: none;
   overflow: auto;
 }
-.nav > ul li {
+.nav > ul > li {
   height: 100%;
   display: flex;
-  padding: 10px;
+  padding: 20px;
   text-align: center;
+  position: relative;
 }
-.nav > ul li a {
+.nav > ul > li > a {
+  position: relative;
   text-decoration: none;
   color: var(--text-color);
   height: 100%;
@@ -113,6 +115,68 @@ header .other-links ul li a {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.nav > ul > li > a::before {
+  position: absolute;
+  content: "";
+  width: 6px;
+  height: 6px;
+  top: 10px;
+  right: -15px;
+  rotate: 45deg;
+  border: 1px solid var(--text-color);
+  border-top: 0px;
+  border-left: 0px;
+  opacity: 0.6;
+  transition: 150ms linear;
+}
+.nav > ul > li .dropdown-menu {
+  position: fixed;
+  transition: 150ms linear;
+  opacity: 0;
+  top: 50px;
+  border-radius: 6px;
+  max-width: min(100% - 2rem, 400px);
+  pointer-events: none;
+}
+.nav > ul > li .dropdown-menu ul {
+  margin-top: 20px;
+  position: relative;
+  background-color: var(--navbar-color);
+  border-radius: 6px;
+  overflow-x: hidden;
+  max-height: min(100vh - 90px, 500px);
+  padding: 10px;
+  box-shadow: 0px 0px 10px var(--shadow-color);
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.nav > ul > li .dropdown-menu ul li {
+  text-align: left;
+  width: 100%;
+  padding: 10px;
+  border-radius: 8px;
+}
+.nav > ul > li .dropdown-menu ul li:hover {
+  background-color: rgb(35, 150, 213);
+}
+.nav > ul > li .dropdown-menu ul li:hover a {
+  color: white;
+}
+.nav > ul > li .dropdown-menu ul li a {
+  text-decoration: none;
+  color: var(--text-color);
+}
+.nav > ul > li:hover .dropdown-menu {
+  opacity: 1;
+  top: 60px;
+  pointer-events: all;
+}
+.nav > ul > li:hover a::before {
+  opacity: 1;
+  top: 12px;
 }
 
 @media (max-width: 768px) {
