--- a/multiple-hover-menus/css/style.scss
+++ b/multiple-hover-menus/css/style.scss
@@ -11,15 +11,15 @@
 	--button-color: #fff;
 	--menu-color: #fff;
 	--text-color: #000;
-	--shadow-color: rgba(0, 0, 0, 0.09);
+	--shadow-color: rgba(0, 0, 0, 0.05);
 }
 .darkmode {
-	--bg-color: rgb(25, 25, 25);
-	--navbar-color: rgb(15, 15, 15);
-	--button-color: rgb(0, 0, 0);
+	--bg-color: #11081f;
+	--navbar-color: #11081f;
+	--button-color: #639;
 	--menu-color: rgba(0, 0, 0, 0.931);
 	--text-color: #fff;
-	--shadow-color: rgba(0, 0, 0, 0.444);
+	--shadow-color: rgba(0, 0, 0, 0.5);
 }
 body {
 	width: 100%;
@@ -34,7 +34,7 @@ header {
 	display: flex;
 	position: fixed;
 	background-color: var(--navbar-color);
-	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+	box-shadow: 0px 0px 10px var(--shadow-color);
 	height: 70px;
 	width: 100vw;
 	justify-content: space-between;
@@ -95,12 +95,14 @@ header {
 		justify-content: start;
 		list-style-type: none;
 		overflow: auto;
-		li {
+		& > li {
 			height: 100%;
 			display: flex;
-			padding: 10px;
+			padding: 20px;
 			text-align: center;
-			a {
+			position: relative;
+			& > a {
+				position: relative;
 				text-decoration: none;
 				color: var(--text-color);
 				height: 100%;
@@ -108,6 +110,71 @@ header {
 				display: flex;
 				justify-content: center;
 				align-items: center;
+				&::before {
+					position: absolute;
+					content: '';
+					width: 6px;
+					height: 6px;
+					top: 10px;
+					right: -15px;
+					rotate: 45deg;
+					border: 1px solid var(--text-color);
+					border-top: 0px;
+					border-left: 0px;
+					opacity: 0.6;
+					transition: 150ms linear;
+				}
+			}
+
+			.dropdown-menu {
+				position: fixed;
+				transition: 150ms linear;
+				opacity: 0;
+				top: 50px;
+				border-radius: 6px;
+				max-width: min(calc(100% - 2rem), 400px);
+				pointer-events: none;
+				ul {
+					margin-top: 20px;
+					position: relative;
+					background-color: var(--navbar-color);
+					border-radius: 6px;
+					overflow-x: hidden;
+					max-height: min(calc(100vh - 90px), 500px);
+					padding: 10px;
+					box-shadow: 0px 0px 10px var(--shadow-color);
+					overflow-y: auto;
+					display: flex;
+					flex-direction: column;
+					gap: 10px;
+					li {
+						text-align: left;
+						width: 100%;
+						padding: 10px;
+						border-radius: 8px;
+						&:hover {
+							background-color: rgb(35, 150, 213);
+							a {
+								color: white;
+							}
+						}
+						a {
+							text-decoration: none;
+							color: var(--text-color);
+						}
+					}
+				}
+			}
+			&:hover {
+				.dropdown-menu {
+					opacity: 1;
+					top: 60px;
+					pointer-events: all;
+				}
+				a::before {
+					opacity: 1;
+					top: 12px;
+				}
 			}
 		}
 	}
