--- a/multiple-hover-menus/css/style.scss
+++ b/multiple-hover-menus/css/style.scss
@@ -128,11 +128,12 @@ header {
 
 			.dropdown-menu {
 				position: fixed;
-				transition: 150ms linear;
+				transition: 250ms linear;
 				opacity: 0;
+				bottom: auto;
 				top: 50px;
 				border-radius: 6px;
-				max-width: min(calc(100% - 2rem), 400px);
+				width: min(calc(100% - 2rem), 400px);
 				pointer-events: none;
 				ul {
 					margin-top: 20px;
@@ -147,6 +148,7 @@ header {
 					display: flex;
 					flex-direction: column;
 					gap: 10px;
+					z-index: -1;
 					li {
 						text-align: left;
 						width: 100%;
@@ -167,8 +169,10 @@ header {
 			}
 			&:hover {
 				.dropdown-menu {
+					transition: 250ms linear;
 					opacity: 1;
 					top: 60px;
+					bottom: auto;
 					pointer-events: all;
 				}
 				a::before {
@@ -203,6 +207,20 @@ header {
 			justify-content: space-evenly;
 			li {
 				font-size: 0.75rem;
+				a::before {
+					display: none;
+				}
+				.dropdown-menu {
+					right: 1rem;
+					top: auto;
+				}
+				&:hover {
+					.dropdown-menu {
+						right: 1rem;
+						top: auto;
+						bottom: 65px;
+					}
+				}
 			}
 		}
 	}
