--- a/multiple-dropdown-menus/css/style.css
+++ b/multiple-dropdown-menus/css/style.css
@@ -28,4 +28,108 @@ body {
   width: 100%;
   background-color: var(--bg-color);
   color: var(--text-color);
+}
+
+header {
+  display: flex;
+  position: fixed;
+  background-color: var(--navbar-color);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+  height: 70px;
+  width: 100vw;
+  justify-content: space-between;
+  align-items: center;
+  padding-inline: 20px;
+}
+header .home-btn a {
+  text-decoration: none;
+  padding: 10px 20px;
+  background-color: var(--button-color);
+  color: var(--text-color);
+  border-radius: 25px;
+  box-shadow: 0px 0px 10px var(--shadow-color);
+}
+header .other-links {
+  display: flex;
+  gap: 20px;
+}
+header .other-links button {
+  border: none;
+  background-color: transparent;
+  padding: 10px;
+  background-color: var(--button-color);
+  color: var(--text-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  box-shadow: 0px 0px 10px var(--shadow-color);
+  cursor: pointer;
+}
+header .other-links ul {
+  list-style-type: none;
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+}
+header .other-links ul li a {
+  text-decoration: none;
+  background-color: rgb(28, 149, 210);
+  box-shadow: 0px 0px 10px var(--shadow-color);
+  padding: 10px 20px;
+  border-radius: 25px;
+  color: white;
+}
+
+.nav {
+  height: 100%;
+}
+.nav > ul {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  list-style-type: none;
+  overflow: auto;
+}
+.nav > ul > li {
+  height: 100%;
+  display: flex;
+  padding: 20px;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+}
+.nav > ul > li input {
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  position: absolute;
+  cursor: pointer;
+}
+.nav > ul > li > a {
+  text-decoration: none;
+  color: var(--text-color);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  opacity: 0.7;
+}
+.nav > ul > li > a::before {
+  position: absolute;
+  content: "";
+  width: 6px;
+  height: 6px;
+  top: 10px;
+  right: -15px;
+  rotate: 45deg;
+  border: 1px solid var(--text-color);
+  border-top: 0px;
+  border-left: 0px;
+  opacity: 0.6;
+  transition: 150ms linear;
 }/*# sourceMappingURL=style.css.map */
