--- a/multiple-dropdown-menus/css/style.css
+++ b/multiple-dropdown-menus/css/style.css
@@ -178,4 +178,43 @@ header .other-links ul li a {
 .nav > ul > li .dropdown-menu ul li a {
   text-decoration: none;
   color: var(--text-color);
+}
+
+@media (max-width: 1024px) {
+  header {
+    padding-inline: 10px;
+  }
+  header .other-links {
+    gap: 8px;
+  }
+  header .other-links ul {
+    gap: 8px;
+  }
+  .nav {
+    position: fixed;
+    background-color: var(--navbar-color);
+    box-shadow: 0px 0px 10px var(--shadow-color);
+    left: 0;
+    height: 60px;
+    width: 100vw;
+    top: auto;
+    bottom: 0;
+  }
+  .nav > ul {
+    width: 100vw;
+    justify-content: space-evenly;
+  }
+  .nav > ul li {
+    font-size: 0.75rem;
+  }
+  .nav > ul li .dropdown-menu {
+    width: calc(100% - 2rem);
+    right: 1rem;
+    top: auto;
+    bottom: 0px;
+  }
+  .nav > ul li .open-menu.active ~ .dropdown-menu {
+    bottom: 70px;
+    top: auto;
+  }
 }/*# sourceMappingURL=style.css.map */
