--- a/multiple-dropdown-menus/css/style.scss
+++ b/multiple-dropdown-menus/css/style.scss
@@ -178,3 +178,43 @@ header {
 		}
 	}
 }
+@media (max-width: 1024px) {
+	header {
+		padding-inline: 10px;
+		.other-links {
+			gap: 8px;
+			ul {
+				gap: 8px;
+			}
+		}
+	}
+	.nav {
+		position: fixed;
+		background-color: var(--navbar-color);
+		box-shadow: 0px 0px 10px var(--shadow-color);
+		left: 0;
+		height: 60px;
+		width: 100vw;
+		top: auto;
+		bottom: 0;
+		& > ul {
+			width: 100vw;
+			justify-content: space-evenly;
+			li {
+				font-size: 0.75rem;
+				.dropdown-menu {
+					width: calc(100% - 2rem);
+					right: 1rem;
+					top: auto;
+					bottom: 0px;
+				}
+				.open-menu.active {
+					& ~ .dropdown-menu {
+						bottom: 70px;
+						top: auto;
+					}
+				}
+			}
+		}
+	}
+}
