mobile active button styling & max dropdown height

--- a/multiple-dropdown-menus/css/style.scss
+++ b/multiple-dropdown-menus/css/style.scss
@@ -90,14 +90,12 @@ header {
 		display: flex;
 		justify-content: start;
 		list-style-type: none;
-		overflow: auto;
 		& > li {
 			height: 100%;
 			display: flex;
 			padding: 20px;
 			text-align: center;
 			position: relative;
-			overflow: hidden;
 			& > a {
 				text-decoration: none;
 				color: var(--text-color);
@@ -129,6 +127,7 @@ header {
 					opacity: 1;
 				}
 				& ~ .dropdown-menu {
+                    pointer-events: all;
 					opacity: 1;
 					top: 90px;
 					pointer-events: all;
@@ -141,9 +140,11 @@ header {
 				bottom: auto;
 				top: 40px;
 				border-radius: 6px;
-				max-height: min(calc(100vh - 90px), 500px);
+				max-height: min(calc(100vh - 130px), 500px);
 				width: min(calc(100% - 2rem), 400px);
 				pointer-events: none;
+                overflow: auto;
+                box-shadow: 0px 0px 10px var(--shadow-color);
 				ul {
 					list-style-type: none;
 					position: relative;
@@ -151,7 +152,6 @@ header {
 					border-radius: 6px;
 					overflow-x: hidden;
 					padding: 10px;
-					box-shadow: 0px 0px 10px var(--shadow-color);
 					overflow-y: auto;
 					display: flex;
 					flex-direction: column;
@@ -181,6 +181,9 @@ header {
 @media (max-width: 1024px) {
 	header {
 		padding-inline: 10px;
+        height: 55px;
+        font-size: 0.8rem;
+       box-shadow: 0px 0px 10px var(--shadow-color);
 		.other-links {
 			gap: 8px;
 			ul {
@@ -200,15 +203,30 @@ header {
 		& > ul {
 			width: 100vw;
 			justify-content: space-evenly;
-			li {
-				font-size: 0.75rem;
+			& > li {
+				padding: 5px;
+				& > .open-menu {
+					border-radius: 8px;
+					padding: 5px;
+                    transition: 300ms linear;
+					&::before {
+						display: none;
+					}
+				}
+				font-size: 0.7rem;
 				.dropdown-menu {
 					width: calc(100% - 2rem);
 					right: 1rem;
 					top: auto;
-					bottom: 0px;
+					bottom: 15px;
+                    pointer-events: none;
+                    z-index: -1;
+
 				}
 				.open-menu.active {
+					background-color: rgb(38, 145, 227);
+                    top: -12px;
+					color: white;
 					& ~ .dropdown-menu {
 						bottom: 70px;
 						top: auto;
