--- a/multiple-dropdown-menus/css/style.css
+++ b/multiple-dropdown-menus/css/style.css
@@ -92,7 +92,6 @@ header .other-links ul li a {
   display: flex;
   justify-content: start;
   list-style-type: none;
-  overflow: auto;
 }
 .nav > ul > li {
   height: 100%;
@@ -100,7 +99,6 @@ header .other-links ul li a {
   padding: 20px;
   text-align: center;
   position: relative;
-  overflow: hidden;
 }
 .nav > ul > li > a {
   text-decoration: none;
@@ -134,6 +132,7 @@ header .other-links ul li a {
   opacity: 1;
 }
 .nav > ul > li .open-menu.active ~ .dropdown-menu {
+  pointer-events: all;
   opacity: 1;
   top: 90px;
   pointer-events: all;
@@ -145,9 +144,11 @@ header .other-links ul li a {
   bottom: auto;
   top: 40px;
   border-radius: 6px;
-  max-height: min(100vh - 90px, 500px);
+  max-height: min(100vh - 130px, 500px);
   width: min(100% - 2rem, 400px);
   pointer-events: none;
+  overflow: auto;
+  box-shadow: 0px 0px 10px var(--shadow-color);
 }
 .nav > ul > li .dropdown-menu ul {
   list-style-type: none;
@@ -156,7 +157,6 @@ header .other-links ul li a {
   border-radius: 6px;
   overflow-x: hidden;
   padding: 10px;
-  box-shadow: 0px 0px 10px var(--shadow-color);
   overflow-y: auto;
   display: flex;
   flex-direction: column;
@@ -183,6 +183,9 @@ header .other-links ul li a {
 @media (max-width: 1024px) {
   header {
     padding-inline: 10px;
+    height: 55px;
+    font-size: 0.8rem;
+    box-shadow: 0px 0px 10px var(--shadow-color);
   }
   header .other-links {
     gap: 8px;
@@ -204,16 +207,32 @@ header .other-links ul li a {
     width: 100vw;
     justify-content: space-evenly;
   }
-  .nav > ul li {
-    font-size: 0.75rem;
+  .nav > ul > li {
+    padding: 5px;
+    font-size: 0.7rem;
   }
-  .nav > ul li .dropdown-menu {
+  .nav > ul > li > .open-menu {
+    border-radius: 8px;
+    padding: 5px;
+    transition: 300ms linear;
+  }
+  .nav > ul > li > .open-menu::before {
+    display: none;
+  }
+  .nav > ul > li .dropdown-menu {
     width: calc(100% - 2rem);
     right: 1rem;
     top: auto;
-    bottom: 0px;
+    bottom: 15px;
+    pointer-events: none;
+    z-index: -1;
   }
-  .nav > ul li .open-menu.active ~ .dropdown-menu {
+  .nav > ul > li .open-menu.active {
+    background-color: rgb(38, 145, 227);
+    top: -12px;
+    color: white;
+  }
+  .nav > ul > li .open-menu.active ~ .dropdown-menu {
     bottom: 70px;
     top: auto;
   }
