--- a/glass-sidebar/css/style.scss
+++ b/glass-sidebar/css/style.scss
@@ -5,3 +5,9 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
+body {
+    height: 100vh;
+    background-image: url('../images/bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
