changed toggle button styling

--- a/glass-sidebar/css/style.css
+++ b/glass-sidebar/css/style.css
@@ -25,6 +25,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 .sidebar .logo {
   width: 100%;
@@ -84,19 +86,22 @@ body {
   border-top: 2px solid rgba(255, 255, 255, 0.1);
   margin: 40px 0 50px;
 }
-.sidebar .toggle {
+.sidebar nav .toggle {
   cursor: pointer;
-  position: absolute;
   color: #fff;
-  top: 20%;
-  right: -15px;
-  line-height: 50%;
-  text-align: center;
-  border-radius: 50%;
-  padding: 2px 0 2px 2px;
-  background: linear-gradient(90deg, transparent 50%, rgba(10, 10, 10, 0.65) 50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 56px;
+  background: #139dbc;
+  border-radius: 3px;
+  padding: 20px;
+  transition: 0.3s;
 }
-.sidebar .toggle span {
+.sidebar nav .toggle:hover {
+  background-color: #0e7187;
+}
+.sidebar nav .toggle span {
   font-size: 28px;
 }
 .sidebar.open {
@@ -121,7 +126,11 @@ body {
   transition-delay: 0.2s;
 }
 
-@media (max-height: 800px) {
+@media (max-width: 792px) {
+  .sidebar {
+    padding-bottom: 20px;
+    justify-content: start;
+  }
   .sidebar .logo {
     display: flex;
     justify-content: center;
@@ -136,5 +145,8 @@ body {
   .sidebar nav .nav-title {
     padding: 0;
     margin: 0;
+  }
+  .sidebar nav .toggle {
+    padding: 20px;
   }
 }/*# sourceMappingURL=style.css.map */
